k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neuroscan-service
spec:
  type: NodePort
  selector:
    app: neuroscan
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
      nodePort: 30001
